[GS] [Patients] In the Edit box there isn't a gap between the identifiers as there is with the groups so they're out of alignment. [NY: Responsiveness on tablet resolution - identifiers don't appear correctly below groups]

--- a/root/webapp/app/styles/patientview/sass/_base.scss
+++ b/root/webapp/app/styles/patientview/sass/_base.scss
@@ -159,10 +159,6 @@ hr{
     }
 }
 
-.btn{
-    line-height:26px;
-}
-
 .btn-group-switcher{
     &.btn-group .btn + .btn{
         margin-left:0;
@@ -204,6 +200,7 @@ hr{
     min-height:120px;
 
     .identifier-list-item{
+        margin-bottom:10px;
         > .btn-group{
             margin-right:15px;
         }
